--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 
 server.port=8080
 spring.application.name=RestfulAPIProject
+
+# Database Configuration
+
+spring.data.mongodb.uri=mongodb+srv://shinaoguntoye:Adeleke123!@to-do-list-app.mr1zf.mongodb.net/?retryWrites=true&w=majority&appName=To-Do-List-App
+
