chore: update MongoDB URI to point to sample_mflix database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,4 @@ spring.application.name=RestfulAPIProject
 
 # Database Configuration
 
-spring.data.mongodb.uri=mongodb+srv://shinaoguntoye:Adeleke123!@to-do-list-app.mr1zf.mongodb.net/?retryWrites=true&w=majority&appName=To-Do-List-App
-spring.data.mongodb.uri=mongodb://localhost:27017/To-Do-List-App
+spring.data.mongodb.uri=mongodb+srv://shinaoguntoye:Adeleke123!@to-do-list-app.mr1zf.mongodb.net/sample_mflix?retryWrites=true&w=majority&appName=To-Do-List-App
