--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,8 @@
 
 		<dependency>
 			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
+			<artifactId>jakarta.validation-api</artifactId> 
+			<version>3.0.2</version>
 		</dependency>
 	</dependencies>
 
