fix: update API URL in render.yaml for correct backend endpoint

--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -6,4 +6,4 @@ services:
     staticPublishPath: dist
     envVars:
       - key: VITE_API_URL
-        value: https://todo-backend.onrender.com
+        value: https://to-do-list-app-122e.onrender.com/
